# csv-chart-analysis-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.py
function/: __init__.py  单变量.py  多变量相关性.py  散点图.py  热力图.py  类别型变量.py
