[project]
name = "csv-chart-analysis-mcp"
version = "0.1.0"
description = "基于MCP协议的CSV数据可视化分析服务器"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
keywords = ["mcp", "csv", "visualization", "charts", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib>=3.5.0",
    "mcp[cli]>=1.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pingouin>=0.5.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Wang-Zichuan/csv-chart-analysis-mcp"
Repository = "https://github.com/Wang-Zichuan/csv-chart-analysis-mcp"
Issues = "https://github.com/Wang-Zichuan/csv-chart-analysis-mcp/issues"

[project.scripts]
csv-chart-mcp = "server:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"